[package]
name = "arduinors"
version = "0.1.1"
authors = ["Marcus Rossel <marcusrossel@icloud.com>"]
repository = "https://github.com/marcusrossel/arduinors.git"
edition = "2018"
description = "Firmata-based interface to an Arduino and the Arduino CLI."
license = "MIT OR Apache-2.0"
keywords = ["arduino"]

[dependencies]
firmata = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
